# Action

./: .env  Cargo.toml  README.md
actionkv/: Cargo.toml
actionkv/src/: akv_mem.rs  lib.rs
cpu/src/: cpu1.rs  cpu2.rs  cpu3.rs  main.rs
float/src/: lib.rs  main.rs  mock_rand.rs  visualizing_f32.rs
memory/: Cargo.toml
memory/examples/: window.rs
plug/: Cargo.toml
plug/examples/: hello.rs
plug/src/: main.rs
render-hex/: Cargo.toml
render-hex/examples/: render-hex-parallel-iterator.rs  render-hex-threadpool.rs  render-hex.rs
translator/: Cargo.toml
translator/src/: main.rs
tutorial/: Cargo.toml
tutorial/examples/: ch10-busythreads-broken.rs  ch10-channels-complex.rs  ch10-channels-intro.rs  ch10-multijoin.rs  ch7-fview-str.rs  ch7-fview.rs  ch7-paritybit.rs  ch7-write123.rs
